--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,10 @@
     <button class="search-btn" type="submit">Search</button>
   </form>
 
-    <!-- <div class="photo-info"></div> -->
+    <div class="gallery">
+      
+      <!-- Картки зображень -->
+    </div>
 
     <script src="index.js" type="module"></script>
   </body>
