--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
       <!-- Картки зображень -->
     </div>
 
-    <button type="button" class="load-more">Load more</button>
+    <button type="button" class="load-more" disabled>Load more</button>
 
     <script src="index.js" type="module"></script>
   </body>
